--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,9 +14,7 @@
   -webkit-text-size-adjust: 100%;
 }
 
-
 body {
-  max-width: 1600px;
   margin: 0 auto;
   display: flex;
   min-width: 320px;
